network.tf
resource "aws_vpc" "vpc" {
  cidr_block = var.vpc_cidr 
  enable_dns_hostnames = true 
}

resource "aws_subnet" "public_subnet" {
  vpc_id = aws_vpc.vpc.id
  cidr_block = var.public_subnet_cidr
  availability_zone=var.aws_az
}

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.vpc.id
}

resource "aws_route_table" "public-rt" {
  vpc_id = aws_vpc.vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id 
  }
}

resource "aws_route_table_association" "public-rt-association" {
  subnet_id = aws_subnet.public_subnet.id 
  route_table_id = aws_route_table.public-rt.id
}
